--- a/samples/jobs/js-aggregations/config.yaml
+++ b/samples/jobs/js-aggregations/config.yaml
@@ -5,3 +5,9 @@ graphite:
 data:
     path: /tmp/agent.sqlite3
     ttl: 3600
+# jobs:
+#     - config:
+#           url: tpl://set_test_flow.yaml
+#           flow_tag: test_flow
+#           expiration: 0
+#           refresh: 10
