- New configuration format

--- a/samples/jobs/agentscript/config.yaml
+++ b/samples/jobs/agentscript/config.yaml
@@ -6,8 +6,7 @@ data:
     path: /tmp/agent.sqlite3
     ttl: 3600
 jobs:
-    - config:
-          url: tpl://set_test_flow.asl
-          flow_tag: test_flow
-          expiration: 0
-          refresh: 10
+    - url: tpl://set_test_flow.asl
+      flow_tag: test_flow
+      expiration: 0
+      refresh: 10
