--- a/samples/jobs/php/config.yaml
+++ b/samples/jobs/php/config.yaml
@@ -1,10 +1,9 @@
 jobs:
-  - config:
-      flow_tag: test_flow
-      path: ./demo.php
-      refresh: 10
-      args:
-        - 1320
-      variant: value
-      template:
-        value: 123
+  - flow_tag: test_flow
+    path: ./demo.php
+    refresh: 10
+    args:
+      - 1320
+    variant: value
+    template:
+      value: 123
