- Add support for structured storage

--- a/samples/jobs/agentscript/config.yaml
+++ b/samples/jobs/agentscript/config.yaml
@@ -8,6 +8,7 @@ graphite:
 data:
     path: /tmp/agent.sqlite3
     ttl: 1h
+    listen: ":8000"
 jobs:
     - id: Test Me
       url: tpl://set_test_flow.asl
